<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".vehicle_activity"
    tools:showIn="@layout/activity_vehicle"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/sv_vehicle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <RelativeLayout
            android:id="@+id/rl_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true">
            <TextView
                android:id="@+id/vehicle_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Customer"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/customer_value"
                android:layout_alignBaseline="@+id/customer"
                android:layout_toRightOf="@+id/customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:spinnerMode="dialog"
                android:focusableInTouchMode="true"
                android:paddingBottom="6dp" />

            <TextView
                android:id="@+id/vehicle_type"
                android:layout_below="@+id/customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/VehicleType"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/vehicle_type_value"
                android:layout_alignBaseline="@+id/vehicle_type"
                android:layout_toRightOf="@+id/vehicle_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/vehicle_make"
                android:layout_below="@+id/vehicle_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/VehicleMake"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/vehicle_make_value"
                android:maxLength="15"
                android:layout_alignBaseline="@+id/vehicle_make"
                android:layout_toRightOf="@+id/vehicle_make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/vehicle_model"
                android:layout_below="@+id/vehicle_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/VehicleModel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/vehicle_model_value"
                android:maxLength="15"
                android:layout_alignBaseline="@+id/vehicle_model"
                android:layout_toRightOf="@+id/vehicle_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/vehicle_colour"
                android:layout_below="@+id/vehicle_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/VehicleColour"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/vehicle_colour_value"
                android:maxLength="15"
                android:layout_alignBaseline="@+id/vehicle_colour"
                android:layout_toRightOf="@+id/vehicle_colour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/vehicle_reg"
                android:layout_below="@+id/vehicle_colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/VehicleReg"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/vehicle_reg_value"
                android:maxLength="15"
                android:layout_alignBaseline="@+id/vehicle_reg"
                android:layout_toRightOf="@+id/vehicle_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/vehicle_passengers"
                android:layout_below="@+id/vehicle_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/VehicleNumberOfPassengers"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/vehicle_passengers_value"
                android:maxLength="1"
                android:layout_alignBaseline="@+id/vehicle_passengers"
                android:layout_toRightOf="@+id/vehicle_passengers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/vehicle_wheels"
                android:layout_below="@+id/vehicle_passengers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/VehicleNumberOfWheels"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/vehicle_wheels_value"
                android:maxLength="1"
                android:enabled="false"
                android:layout_alignBaseline="@+id/vehicle_wheels"
                android:layout_toRightOf="@+id/vehicle_wheels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
